--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">clubs_connect</string>
     <string name="send">Send</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- TODO: Check design pattern of AAQ here for Chat Preferences -->
+    <string name="chat_pref_push_on">push all</string>
+    <string  name="chat_pref_push_off">notifications off</string>
+
 </resources>
